--- a/test-plone-4.3.x.cfg
+++ b/test-plone-4.3.x.cfg
@@ -1,5 +1,5 @@
 [buildout]
-extends = 
+extends =
     https://raw.github.com/collective/buildout.plonetest/master/plone-4.3.x.cfg
     https://raw.github.com/plone/buildout.jenkins/master/jenkins-code-analysis.cfg
 extensions = mr.developer
@@ -98,4 +98,5 @@ Products.contentmigration = git git://github.com/plone/Products.contentmigration
 zope.interface = 3.6.1
 plone.app.dexterity = 2.0.4
 robotsuite = 1.2.1
+plone.app.jquery = 1.8.3
 
