--- a/test-plone-4.3.x.cfg
+++ b/test-plone-4.3.x.cfg
@@ -30,6 +30,7 @@ parts +=
     releaser
     zopepy
     library-settings
+    robot
 versions = versions
 
 [test]
@@ -102,3 +103,12 @@ plone.app.dexterity = 2.0.4
 robotsuite = 1.2.1
 plone.app.jquery = 1.8.3
 
+[robot]
+recipe = zc.recipe.egg
+eggs =
+    Pillow
+    ${test:eggs}
+    plone.app.robotframework
+scripts =
+    robot-server
+    robot
