--- a/test-plone-4.3.x.cfg
+++ b/test-plone-4.3.x.cfg
@@ -101,6 +101,7 @@ zope.interface = 3.6.1
 plone.app.dexterity = 2.0.4
 robotsuite = 1.2.1
 plone.app.jquery = 1.8.3
+selenium = 2.31.0
 
 [robot]
 recipe = zc.recipe.egg
