use master-branch for plone.app.widgets

--- a/test-plone-4.3.x.cfg
+++ b/test-plone-4.3.x.cfg
@@ -16,6 +16,7 @@ auto-checkout =
     plone.app.versioningbehavior
 # needs a release
     collective.dexteritydiff
+    plone.app.widgets
 
 package-name = plone.app.contenttypes
 package-extras = [test,migrate_atct]
@@ -101,6 +102,7 @@ plone.app.relationfield = git https://github.com/plone/plone.app.relationfield.g
 Products.contentmigration = git git://github.com/plone/Products.contentmigration.git pushurl=git@github.com:plone/Products.contentmigration.git
 plone.app.versioningbehavior = git https://github.com/plone/plone.app.versioningbehavior.git pushurl=git@github.com:plone/plone.app.versioningbehavior.git
 collective.dexteritydiff = git https://github.com/collective/collective.dexteritydiff.git pushurl=git@github.com:collective/collective.dexteritydiff.git
+plone.app.widgets = git https://github.com/plone/plone.app.widgets.git pushurl=git@github.com:plone/plone.app.widgets.git
 
 [versions]
 zope.interface = 3.6.1
